--- a/package.json
+++ b/package.json
@@ -14,5 +14,52 @@
   "bugs": {
     "url": "https://github.com/zarjay/youtube-search/issues"
   },
-  "homepage": "https://github.com/zarjay/youtube-search#readme"
+  "homepage": "https://github.com/zarjay/youtube-search#readme",
+  "devDependencies": {
+    "autoprefixer": "^6.1.2",
+    "babel-core": "^6.3.15",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-3": "^6.3.13",
+    "babelify": "^7.2.0",
+    "browser-sync": "^2.10.0",
+    "browserify-shim": "^3.8.11",
+    "del": "^2.2.0",
+    "globby": "^4.0.0",
+    "gulp": "^3.9.0",
+    "gulp-cached": "^1.1.0",
+    "gulp-if": "^2.0.0",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jscs-stylish": "^1.3.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-minify-css": "^1.2.2",
+    "gulp-postcss": "^6.0.1",
+    "gulp-sass": "^2.1.0",
+    "gulp-size": "^2.0.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "jshint": "^2.9.1-rc1",
+    "jsonfile": "^2.2.3",
+    "lodash": "^3.10.1",
+    "merge-stream": "^1.0.0",
+    "require-dir": "^0.3.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.1"
+  },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "ignore": "node_modules",
+          "presets": [
+            "es2015",
+            "stage-3",
+            "react"
+          ]
+        }
+      ]
+    ]
+  }
 }
