--- a/package.json
+++ b/package.json
@@ -29,16 +29,12 @@
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-if": "^2.0.0",
-    "gulp-jscs": "^3.0.2",
-    "gulp-jscs-stylish": "^1.3.0",
-    "gulp-jshint": "^2.0.0",
     "gulp-minify-css": "^1.2.2",
     "gulp-postcss": "^6.0.1",
     "gulp-sass": "^2.1.0",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
-    "jshint": "^2.9.1-rc1",
     "jsonfile": "^2.2.3",
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
@@ -61,5 +57,11 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "es6-promise": "^3.0.2",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "whatwg-fetch": "^0.10.1"
   }
 }
