--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "es6-promise": "^3.0.2",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "sanitize.css": "^3.0.0",
     "whatwg-fetch": "^0.10.1"
   }
 }
