--- a/.gitattributes
+++ b/.gitattributes
@@ -20,6 +20,7 @@
 *.less text
 *.styl text
 *.js text
+*.jsx text
 *.coffee text
 *.json text
 *.htm text
@@ -56,6 +57,7 @@
 .gitconfig text
 
 # code analysis config
+.eslintrc text
 .jshintrc text
 .jscsrc text
 .jshintignore text
