--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 dist
 
+### VisualStudioCode template
+.vscode
+
 ### Node template
 # Logs
 logs
@@ -26,31 +29,33 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
-# Dependency directory
-# https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
+# Dependency directories
 node_modules
-### Windows template
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+jspm_packages
 
-# Folder config file
-Desktop.ini
+# Optional npm cache directory
+.npm
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+# Optional REPL history
+.node_repl_history
+### Sass template
+.sass-cache/
+*.css.map
+### SublimeText template
+# cache files for sublime text
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# workspace files are user-specific
+*.sublime-workspace
 
-# Windows shortcuts
-*.lnk
-### VisualStudioCode template
-.settings
+# project files should be checked into the repository, unless a significant
+# proportion of contributors will probably not be using SublimeText
+# *.sublime-project
 
+# sftp configuration file
+sftp-config.json
 ### OSX template
 .DS_Store
 .AppleDouble
@@ -77,35 +82,32 @@ Network Trash Folder
 Temporary Items
 .apdisk
 ### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
-
-*.iml
-
-## Directory-based project format:
-.idea/
-# if you remove the above rule, at least ignore the following:
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-# .idea/workspace.xml
-# .idea/tasks.xml
-# .idea/dictionaries
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
 
 # Sensitive or high-churn files:
-# .idea/dataSources.ids
-# .idea/dataSources.xml
-# .idea/sqlDataSources.xml
-# .idea/dynamic.xml
-# .idea/uiDesigner.xml
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
 
 # Gradle:
-# .idea/gradle.xml
-# .idea/libraries
+.idea/gradle.xml
+.idea/libraries
 
 # Mongo Explorer plugin:
-# .idea/mongoSettings.xml
+.idea/mongoSettings.xml
 
 ## File-based project format:
-*.ipr
 *.iws
 
 ## Plugin-specific files:
@@ -123,20 +125,24 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
-### SublimeText template
-# cache files for sublime text
-*.tmlanguage.cache
-*.tmPreferences.cache
-*.stTheme.cache
+fabric.properties
+### Windows template
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
 
-# workspace files are user-specific
-*.sublime-workspace
+# Folder config file
+Desktop.ini
 
-# project files should be checked into the repository, unless a significant
-# proportion of contributors will probably not be using SublimeText
-# *.sublime-project
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
 
-# sftp configuration file
-sftp-config.json
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
 
-# Created by .ignore support plugin (hsz.mobi)
+# Windows shortcuts
+*.lnk
+
