--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "YouTube search demo using React",
   "scripts": {
+    "build": "cross-env NODE_ENV=production webpack",
+    "clean": "del dist/**/*",
+    "lint:css": "stylelint src/**/*.scss --syntax scss",
+    "lint:js": "eslint src",
+    "prebuild": "npm run clean",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,53 +21,35 @@
   },
   "homepage": "https://github.com/zarjay/youtube-search#readme",
   "devDependencies": {
-    "autoprefixer": "^6.1.2",
-    "babel-core": "^6.3.15",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-3": "^6.3.13",
-    "babelify": "^7.2.0",
-    "browser-sync": "^2.10.0",
-    "browserify-shim": "^3.8.11",
-    "del": "^2.2.0",
-    "globby": "^4.0.0",
-    "gulp": "^3.9.0",
-    "gulp-cached": "^1.1.0",
-    "gulp-if": "^2.0.0",
-    "gulp-minify-css": "^1.2.2",
-    "gulp-postcss": "^6.0.1",
-    "gulp-sass": "^2.1.0",
-    "gulp-size": "^2.0.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.1",
-    "jsonfile": "^2.2.3",
-    "lodash": "^3.10.1",
-    "merge-stream": "^1.0.0",
-    "require-dir": "^0.3.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.1"
-  },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "ignore": "node_modules",
-          "presets": [
-            "es2015",
-            "stage-3",
-            "react"
-          ]
-        }
-      ]
-    ]
+    "autoprefixer": "6.3.6",
+    "babel-core": "6.7.6",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-stage-3": "6.5.0",
+    "cross-env": "1.0.7",
+    "css-loader": "0.23.1",
+    "del-cli": "0.2.0",
+    "eslint": "2.8.0",
+    "eslint-config-airbnb": "7.0.0",
+    "eslint-plugin-jsx-a11y": "0.6.2",
+    "eslint-plugin-react": "5.0.0",
+    "extract-text-webpack-plugin": "1.0.1",
+    "html-webpack-plugin": "2.15.0",
+    "node-sass": "3.4.2",
+    "postcss-loader": "0.8.2",
+    "sass-loader": "3.2.0",
+    "style-loader": "0.13.1",
+    "stylelint": "5.4.0",
+    "stylelint-config-standard": "5.0.0",
+    "webpack": "1.13.0"
   },
   "dependencies": {
-    "es6-promise": "^3.0.2",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "sanitize.css": "^3.0.0",
-    "whatwg-fetch": "^0.10.1"
+    "es6-promise": "3.1.2",
+    "lodash": "4.11.1",
+    "react": "15.0.1",
+    "react-dom": "15.0.1",
+    "sanitize.css": "3.3.0",
+    "whatwg-fetch": "0.11.0"
   }
 }
